add two sections

--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     padding: 0;
 }
 
+
+
 body {
     font-family: 'Merriweather', serif;
-    background-color: #f9fafc;
+    background-color: #ebf2ff;
 }
 
 .navbar {
@@ -23,7 +25,7 @@ body {
     width: 100%;
 }
 
-.nav__item {
+.button__property {
     background-image: linear-gradient(
         to right,
         #ff512f 0%,
@@ -38,7 +40,7 @@ body {
     font-weight: 600;
 }
 
-.nav__item:hover {
+.button__property:hover {
     border: solid 2px #ff6767;
     cursor: pointer;
 
@@ -49,20 +51,112 @@ body {
         justify-content: space-between;
         padding: 10px 30px;
     }
-    
+
+    #pizza__card {
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
+
+    .hero__container {
+        margin: 20px;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+
+    .explore__menu__lists {
+        display: flex;
+        gap: 15px;
+        margin-top: 40px;
+        padding: 0 30px;
+    }
+    .explore__menu__container {
+        position: relative;
+        
+    }
+
+    .explore__menu__gradient__bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+    );
+    z-index: -3;
+    transform: skewY(-5deg);
+    }
 }
 
 @media (min-width:1024px) {
+    .container {
+        max-width: 70%;
+
+    }
     .navbar__brand {
         width: 150px;
     }
 
-    .nav__item {
+    .button__property {
         padding: 20px;
         font-size: 20px;
+    }
 
-
-
+    .hero__description {
+        width: 100%;
     }
     
+}
+
+.container {
+    max-width: 100%;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.hero__image__container {
+    width: 100%;
+}
+
+.hero__image {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 25px 50px -12px rgb(252, 101, 101, 0.25);
+}
+
+.hero__text {
+    font-weight: 800;
+    font-size: 30px;
+    margin: 20px 0;
+    color: #1d3557;
+}
+
+.food__card__image__container {
+    width: 100%;
+}
+
+.food__image {
+    border-radius: 8px 8px 0 0;
+    width: 100%;
+}
+
+.food__card {
+    background-color: #f9f9f9;
+}
+
+.food__card__description {
+    padding: 15px;
+}
+
+.explore__menu__text {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    color: #1d3557;
 }
